# depman

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  run
.github/workflows/: publish.yml  release.yml  test.yml
scripts/: mock-server  prepare-test-files
src/: main.rs  utils.rs
src/events/: event.rs  mod.rs
src/parser/: determinekind.rs  javascriptnpm.rs  jspackagejson.rs  mod.rs  mod.rs.bkp  rustcargo.rs  rustcargotoml.rs
src/parser/parsers/: javascriptnpm.rs  mod.rs  rustcargo.rs
src/render/: mod.rs
testfiles/: babel-core.json  babel-eslint.json  babel-plugin-transform-object-rest-spread.json  babel-preset-flow.json  babel-preset-react.json  commander.json  cssnano.json  eslint-config-airbnb.json  eslint-config-prettier.json  eslint-loader.json  eslint-plugin-flowtype.json  eslint-plugin-jsx-a11y.json  eslint.json  flow-bin.json  parcel-bundler.json  react-dom.json  react.json  stylelint-config-standard.json
tests/javascript/npm/: package-lock.json  package.json
tests/node/npm/: package-lock.json
tests/rust/cargo/: Cargo.toml
