[package]
name = "depman"
version = "0.1.0"
authors = ["Abin Simon <abinsimon10@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
semver = "0.9.0"
humanesort = "0.1.0-alpha"
serde = "1.0.106"
serde_json = "1.0"
futures = "0.3.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
