[package]
name = "depman"
version = "0.1.0"
authors = ["Abin Simon <abinsimon10@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
semver = "0.9.0"
humanesort = "0.1.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.6"
# toml = { version = "0.5.6", features = ["serde"] }
futures = "0.3.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

rand = "0.7"
tui = "0.9"
termion = "1.5"
