[package]
name = "depman"
version = "0.7.3"
authors = ["Abin Simon <abinsimon10@gmail.com>"]
edition = "2018"
description ="TUI to manage your dependencies"
license ="Apache-2.0"
homepage = "https://github.com/meain/depman"
repository = "https://github.com/meain/depman"
categories = ["command-line-interface"]
keywords = [ "cli", "dependencies", "tui", "deps" ]
readme = "README.md"

[profile.release]
# opt-level = 'z'  # Optimize for size instead of speed
# panic = 'abort'
lto = true
codegen-units = 1

[dependencies]
regex = "1"
semver = "0.9.0"
humanesort = "0.1.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.5.6"
futures = "0.3.5"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

rand = "0.7"
tui = "0.9"
termion = "1.5"
toml_edit = "0.1.5"
async-trait = "0.1.31"
